[FIX] payment acquirer boxes spacing

--- a/addons/care_config_relaunch_v2/static/src/css/care_multistep.css
+++ b/addons/care_config_relaunch_v2/static/src/css/care_multistep.css
@@ -570,6 +570,18 @@ body[data-on-shop-page=True][data-latest-product-theme=care_multistep]:not([data
 /* payment acquirer boxes */
 
 body[data-on-shop-page=True][data-latest-product-theme=care_multistep]:not([data-confirmation-controller-called=True])
+#order_total .text-right {
+    margin-bottom: 0px;
+}
+
+body[data-on-shop-page=True][data-latest-product-theme=care_multistep]:not([data-confirmation-controller-called=True])
+.oe_cart table td:nth-last-child(1),
+body[data-on-shop-page=True][data-latest-product-theme=care_multistep]:not([data-confirmation-controller-called=True])
+.oe_cart table td:nth-last-child(2) {
+    height: auto !important;
+}
+
+body[data-on-shop-page=True][data-latest-product-theme=care_multistep]:not([data-confirmation-controller-called=True])
 ul.nav.nav-tabs li {
     height: 134px;
 }
